--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,7 @@ body, html, #root {
   height: 100%;
   font-family: 'Poppins', sans-serif;
 }
+
+input, select, button {
+  background-color: white;
+}
